[package]
name = "fench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openff-toolkit = { version = "0.1.0", path = "../../omsf/rust/openff-toolkit" }
ligand = { path = "../../omsf/rust/ligand" }
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
